--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "anurag-or-backend",
   "version": "1.0.0",
   "description": "this is a backend project ",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -12,5 +13,9 @@
     "anurag"
   ],
   "author": "Anurag Rishi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "D": "^1.0.0",
+    "nodemon": "^3.1.0"
+  }
 }
